# GIBVH

./: CMakeLists.txt
Silhouettes/: frame.h
shader programs/: Simple.vshader
